--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -12,6 +12,34 @@
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:weightSum="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/settings_default_num_advs"
+                android:id="@+id/textView" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="0.26" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:gravity="center_horizontal"
+                android:id="@+id/settings_default_advertisement_number"
+                android:layout_weight="0.30" />
+
+        </LinearLayout>
+
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_password_change"
             android:layout_width="fill_parent"
