--- a/app/src/main/res/layout/content_edit_profile.xml
+++ b/app/src/main/res/layout/content_edit_profile.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
+    android:orientation="vertical"
     android:layout_height="fill_parent"
     android:fitsSystemWindows="true">
 
@@ -24,7 +25,7 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="110dp"
             android:id="@+id/edit_profile_imageView"
             android:baselineAlignBottom="false"
             android:contextClickable="false"
@@ -64,10 +65,10 @@
             android:textStyle="italic" />
         <ListView
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="87dp"
             android:id="@+id/profile_interests_edit"
             android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp" />
+            android:layout_marginBottom="10dp" />
 
         <LinearLayout
             android:orientation="horizontal"
@@ -102,4 +103,4 @@
 
     </LinearLayout>
 
-</ScrollView>
+</LinearLayout>
