--- a/app/src/main/res/menu/menu_view_foreign_adv.xml
+++ b/app/src/main/res/menu/menu_view_foreign_adv.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/action_report_adv"
         android:orderInCategory="100"
-        android:icon="@drawable/ic_menu_slideshow"
+        android:icon="@mipmap/report"
         android:title="@string/action_report"
         app:showAsAction="ifRoom" />
 </menu>
