--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -3,91 +3,109 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bar_bg"
-    android:paddingTop="0dip" android:layout_gravity="top"
-    >
-    <TableRow android:id="@+id/tableItemChat">
+    android:paddingTop="0dip" android:layout_gravity="top">
+    <TableRow android:id="@+id/tableItemChat"
+        android:layout_height="wrap_content">
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="60dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:layout_gravity="center">
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:layout_weight="2.5"
+            android:padding="5dp">
             <ImageView
                 android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:scaleType="fitCenter"
                 android:id="@+id/image"
 
                 android:src="@drawable/image0"
-                android:layout_gravity="center" />
+                android:layout_gravity="center"
+                android:layout_weight="4" />
         </LinearLayout>
         <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="220dp"
-            android:layout_height="wrap_content"
-            android:paddingTop="0dip" android:layout_gravity="top"
-            >
-            <TableRow>
+            android:layout_width="0dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_weight="7"
+            android:padding="5dp">
+
+            <TableRow android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:padding="5dp">
                 <TextView
-                    android:id="@+id/text"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:layout_weight="1" android:layout_gravity="left|center_vertical"
-                    android:textSize="16sp"
-                    android:layout_marginLeft="10dip"
-                    android:layout_marginTop="4dip"
-                    android:textColor="#000000"
-                    android:layout_span="1"
-                    />
-            </TableRow>
-            <TableRow>
-                <TextView
-                    android:text=""
                     android:id="@+id/text1"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
                     android:layout_gravity="left|center_vertical"
                     android:textSize="16sp"
                     android:textColor="#000000"
-                    android:layout_marginLeft="10dip"
-                    android:layout_marginTop="4dip"
-                    android:gravity="left"/>
+                    android:gravity="left"
+                    android:textStyle="bold"
+                    android:layout_weight="1"
+                    android:text="ZZZZZZZZZZZZZZZZ" />
+            </TableRow>
+
+            <TableRow android:padding="5dp">
+                <TextView
+                    android:id="@+id/text"
+                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_gravity="left|center_vertical"
+                    android:textSize="12dp"
+                    android:textColor="#000000"
+                    android:layout_span="1"
+                    android:text="b"
+                    android:textStyle="italic"
+                    android:layout_weight="1" />
             </TableRow>
         </TableLayout>
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="30dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:layout_gravity="center" >
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_weight="2.5"
+            android:padding="5dp">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="New Text"
+                android:text="99"
                 android:id="@+id/tvNumMessages"
                 android:gravity="center"
-                android:layout_gravity="center" />
+                android:layout_gravity="center"
+                android:background="@android:drawable/alert_light_frame"
+                android:layout_weight="1" />
         </LinearLayout>
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="75dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:layout_gravity="center" >
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_weight="2.5"
+            android:padding="5dp">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/mainchat_new_offer"
                 android:id="@+id/tvOffer"
                 android:gravity="center"
-                android:layout_gravity="center" />
+                android:layout_gravity="center"
+                android:textStyle="bold"
+                android:layout_weight="1"
+                android:textColor="#ffffff"
+                android:background="@color/FABcolor"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp" />
         </LinearLayout>
 
     </TableRow>
