--- a/app/src/main/res/layout/content_view_profile.xml
+++ b/app/src/main/res/layout/content_view_profile.xml
@@ -68,6 +68,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/profile_rating_bar"
+                android:isIndicator="true"
                 android:numStars="5"
                 android:stepSize="0.5" />
 
